--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "netlify-lambda": "^1.6.3"
   },
   "dependencies": {
+    "apicache": "^1.5.3",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
